# HaskellParserProject

./: HaskellParserProject-old.txt  HaskellParserProject.cabal  README.md  input.txt  output.txt
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/flag-cache/: HaskellParserProject-0.1.0.0-DZE8kEhxkZ57kDLHk0WK8m  attoparsec-0.13.1.0-2AyzLuPV4T95RcYDl03Ghe  scientific-0.3.4.9-ENrtAw13zTS8y4klTK3l4D
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/lib/x86_64-osx-ghc-8.0.1/HaskellParserProject-0.1.0.0-DZE8kEhxkZ57kDLHk0WK8m/: Lib.hi  libHSHaskellParserProject-0.1.0.0-DZE8kEhxkZ57kDLHk0WK8m-ghc8.0.1.dylib
.stack-work/install/x86_64-osx/lts-7.15/8.0.1/pkgdb/: HaskellParserProject-0.1.0.0-DZE8kEhxkZ57kDLHk0WK8m.conf  package.cache
app/: Main.hs
src/: Array.hs  BoolExpr.hs  Boolean.hs  Calculate.hs  ExprTree.hs  FileIO.hs  Lib.hs  List.hs  Parser.hs  PrettyTreePrint.hs  REPL.hs  While.hs
大作业/: ReadMe.txt
大作业/DOC/: contrib.doc  report.doc  ~$report.doc
