name:                HaskellParserProject
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jianghc724/HaskellParserProject
license:             BSD3
license-file:        LICENSE
author:              Jiang Haochen
maintainer:          jianghc724@foxmail.com
copyright:           2017 JiangHaochen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Boolean
                     , PrettyTreePrint
                     , REPL
                     , While
                     , Calculate
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers
                     , pretty
                     , GenericPretty
                     , mtl
  default-language:    Haskell2010

executable HaskellParserProject
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , attoparsec
                     , containers
                     , pretty
                     , GenericPretty
                     , mtl
                     , HaskellParserProject
                     , containers
  default-language:    Haskell2010

test-suite HaskellParserProject-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HaskellParserProject
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jianghc724/HaskellParserProject
